--- a/ordia/app/templates/index.html
+++ b/ordia/app/templates/index.html
@@ -16,18 +16,18 @@
 	<div class="card mb-4 box-shadow">
 	    
             <div class="card-header">
-		<h4 class="my-0 font-weight-normal">{{_("Examples")}}</h4>
+		<h4 class="my-0 font-weight-normal" data-i18n="Examples"></h4>
             </div>
             <div class="card-body">
 		<dl>
 		    <dt><a href="L99">Luftballon</a></dt>
 		    <dd>
-			{{_("German lexeme.")}}
+			<span data-i18n="German lexeme."></span>
 		    </dd>
 
-		    <dt><a href="L128-F3">Vovserne</a></dt>
+		    <dt><a href="L2310">Rød</a></dt>
 		    <dd>
-			{{_("Danish form.")}}
+			<span data-i18n="Danish lexeme that is part of many compounds."></span>
 		    </dd>
 		</dl>
             </div>
@@ -36,24 +36,24 @@
 
         <div class="card mb-4 box-shadow">
 	    <div class="card-header">
-		<h4 class="my-0 font-weight-normal">{{_("Tools")}}</h4>
+		<h4 class="my-0 font-weight-normal" data-i18n="Tools">Tools</h4>
 	    </div>
 	    <div class="card-body">
 		<dl>
-		    <dt><a href="text-to-lexemes">Text-to-lexemes</a></dt>
-		    <dd>{{_("Convert a text to a list of lexemes.")}}</dd>
+		    <dt><a href="text-to-lexemes" data-i18n="Text-to-lexemes">Text-to-lexemes</a></dt>
+		    <dd data-i18n="Convert a text to a list of lexemes."></dd>
 		</dl>
 	    </div>
         </div>
 	
         <div class="card mb-4 box-shadow">
 	    <div class="card-header">
-		<h4 class="my-0 font-weight-normal">{{_("Other")}}</h4>
+		<h4 class="my-0 font-weight-normal" data-i18n="Other"></h4>
 	    </div>
 	    <div class="card-body">
 		<dl>
-		    <dt><a href="statistics/">{{_("Statistics")}}</a></dt>
-		    <dd>{{_("Count of Wikidata lexemes data.")}}</dd>
+		    <dt><a href="statistics/" data-i18n="Statistics"></a></dt>
+		    <dd data-i18="Count of Wikidata lexemes data."></dd>
 		</dl>
 
 	    </div>
