--- a/ordia/app/templates/statistics.html
+++ b/ordia/app/templates/statistics.html
@@ -80,7 +80,7 @@ ORDER BY DESC(?count)
 
 <div>
 
-  <h1>Statistics</h1>
+  <h1 data-i18n="Statistics">Statistics</h1>
 
   <table class="table table-hover" id="statistics"></table>
   
