Add further changes for I18N

--- a/ordia/app/templates/index.html
+++ b/ordia/app/templates/index.html
@@ -16,19 +16,19 @@
 	<div class="card mb-4 box-shadow">
 	    
             <div class="card-header">
-		<h4 class="my-0 font-weight-normal">Examples</h4>
+		<h4 class="my-0 font-weight-normal" data-i18n="Examples">Examples</h4>
             </div>
             <div class="card-body">
 		<dl>
 		    <dt><a href="L99">Luftballon</a></dt>
 		    <dd>
-			German lexeme.
+			<span data-i18n="German lexeme.">German lexeme.</span>
 		    </dd>
 
-		    <dt><a href="L128-F3">Vovserne</a></dt>
+		    <dt><a href="L2310">Rød</a></dt>
 		    <dd>
-			Danish form.
-		    </dd>
+			<span data-i18n="Danish lexeme that is part of many compounds.">Danish lexeme that is part of many compounds.</span>
+                    </dd>
 		</dl>
             </div>
 
@@ -36,12 +36,12 @@
 
         <div class="card mb-4 box-shadow">
 	    <div class="card-header">
-		<h4 class="my-0 font-weight-normal">Tools</h4>
+		<h4 class="my-0 font-weight-normal" data-i18n="Tools">Tools</h4>
 	    </div>
 	    <div class="card-body">
 		<dl>
 		    <dt><a href="text-to-lexemes">Text-to-lexemes</a></dt>
-		    <dd>Convert a text to a list of lexemes:
+		    <dd data-i18n="Convert a text to a list of lexemes.">Convert a text to a list of lexemes:
 			<a href="text-to-lexemes?text=Regeringen%20spiser%20gr%C3%B8nne%20%C3%A6bler%20om%20vinteren&text-language=da">Danish example</a> and
 			<a href="text-to-lexemes?text=Cars,%20bikes%20and%20motorcycles%20must%20stop%20at%20the%20crossing&text-language=en">English example</a>.</dd>
 		</dl>
@@ -50,12 +50,12 @@
 	
         <div class="card mb-4 box-shadow">
 	    <div class="card-header">
-		<h4 class="my-0 font-weight-normal">Other</h4>
+		<h4 class="my-0 font-weight-normal" data-i18n="Other">Other</h4>
 	    </div>
 	    <div class="card-body">
 		<dl>
-		    <dt><a href="statistics/">Statistics</a></dt>
-		    <dd>Count of Wikidata lexemes data.</dd>
+		    <dt><a href="statistics/" data-i18n="Statistics">Statistics</a></dt>
+		    <dd data-i18="Count of Wikidata lexemes data.">Count of Wikidata lexemes data.</dd>
 		</dl>
 
 	    </div>
