--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -16,7 +16,23 @@
 {{super()}}
 
 <script type="text/javascript" src="{{ url_for('static', filename='jquery.dataTables.min.js') }}"></script>
+
+<script type="text/javascript" src="{{ url_for('static', filename='jquery.i18n.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='jquery.i18n.emitter.bidi.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='jquery.i18n.emitter.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='jquery.i18n.fallbacks.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='jquery.i18n.language.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='jquery.i18n.messagestore.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='jquery.i18n.parser.js') }}"></script>
+
 <script type="text/javascript" src="{{ url_for('static', filename='ordia.js') }}"></script>
+
+
+<script type="text/javascript">
+    $(document).ready(function() {
+       translateI18n( $ );
+    });
+
 
 </script>
 
@@ -31,6 +47,7 @@
 	<div class="input-group">
             <input type="text" class="form-control"
 		   name="q" id="searchterm" value="{{ query }}"
+		   data-i18n="[placeholder]Search after lemma or form"
 		   placeholder="Search after lemma or form"/>
             <span class="input-group-btn">
 		<button class="btn btn-primary" type="submit">
@@ -50,42 +67,55 @@
     <div class="collapse navbar-collapse" id="navbarToogle">
 	<ul class="nav navbar-nav">
 	    <li class="nav-item">
-		<a class="nav-link" href="{{ url_for('app.index') }}">Home</a>
+		<a class="nav-link" href="{{ url_for('app.index') }}" data-i18n="Home">Home</a>
 	    </li> 
 	    
 	    <li class="nav-item">
-		<a class="nav-link" data-toggle="collapse" data-target="#nav-aspects">Aspects</a>
+		<a class="nav-link" data-toggle="collapse" data-target="#nav-aspects" data-i18n="Aspects">Aspects</a>
 	    </li>
 
 	    <div id="nav-aspects" class="collapse">
 		<ul class="nav navbar-nav">
 		    <li class="nav-item">
-			<a class="nav-link" href="{{ url_for('app.show_language_index') }}">Languages</a>
+			<a class="nav-link" href="{{ url_for('app.show_language_index') }}" data-i18n="Language">Languages</a>
 		    </li>
 		    <li class="nav-item">
-			<a class="nav-link" href="{{ url_for('app.show_lexical_category_index') }}">Lexical categories</a>
+			<a class="nav-link" href="{{ url_for('app.show_lexical_category_index') }}" data-i18n="Lexical categories">Lexical categories</a>
 		    </li>
 		    <li class="nav-item">
-			<a class="nav-link" href="{{ url_for('app.show_grammatical_feature_index') }}">Grammatical features</a>
+			<a class="nav-link"
+			   href="{{ url_for('app.show_grammatical_feature_index') }}"
+			   data-i18n="Grammatical features">Grammatical features</a>
 		    </li>
 		    <li class="nav-item">
-			<a class="nav-link" href="{{ url_for('app.show_property_index') }}">Properties</a>
+			<a class="nav-link"
+			   href="{{ url_for('app.show_property_index') }}"
+			   data-i18n="Properties">Properties</a>
 		    </li>
 		    <li class="nav-item">
-			<a class="nav-link" href="{{ url_for('app.show_hyphenation_index') }}">Hyphenation</a>
+			<a class="nav-link"
+			   href="{{ url_for('app.show_hyphenation_index') }}"
+			   data-i18n="Hyphenation">Hyphenation</a>
 		    </li>
 		    <li class="nav-item">
-			<a class="nav-link" href="{{ url_for('app.show_reference_index') }}">References</a>
+			<a class="nav-link"
+			   href="{{ url_for('app.show_reference_index') }}"
+			   data-i18n="References">References</a>
 		    </li>
 		</ul>
 	    </div>
 	    
 	    <li class="nav-item">
-		<a class="nav-link" href="{{ url_for('app.show_text_to_lexemes') }}">Text to lexemes</a>
+		<a class="nav-link"
+		   href="{{ url_for('app.show_text_to_lexemes') }}"
+		   data-i18n="Text to lexemes">Text to lexemes</a>
 	    </li>
 	    
 	    <li class="nav-item">
-		<a class="nav-link" data-toggle="collapse" data-target="#nav-examples">Examples</a>
+		<a class="nav-link"
+		   data-toggle="collapse"
+		   data-target="#nav-examples"
+		   data-i18n="Examples">Examples</a>
 	    </li>
 
 	    <div id="nav-examples" class="collapse">
