--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap.min.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='jquery.dataTables.min.css') }}">
 
-<base href="{{ request.host_url }}">
+<base href="{{ request.host_url + url_for('app.index') }}">
 
 {% endblock %}
 
