--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -29,9 +29,30 @@
 
 
 <script type="text/javascript">
-    $(document).ready(function() {
-       translateI18n( $ );
-    });
+ function translateI18n( $ ) {
+     console.log('Setting up translation');
+     var i18n = $.i18n();
+     
+     // Preferred language
+     preferredLanguage = navigator.languages 
+		       ? navigator.languages[0]
+		       : (navigator.language || navigator.userLanguage);
+     console.log('Detected preferred language: ' + preferredLanguage);
+     i18n.locale = sanitizeLanguage(preferredLanguage);
+
+     i18n.load( '{{ url_for('app.index') }}' + 'i18n/' + i18n.locale + '.json', i18n.locale )
+	 .done( function() {
+             console.log('Translating');
+             $( 'body' ).i18n();
+	 });
+ };
+
+
+
+
+ $(document).ready(function() {
+     translateI18n( $ );
+ });
 
 
 </script>
