Implement #52: Kurdish for text-to-lexemes

--- a/ordia/app/templates/text_to_lexemes.html
+++ b/ordia/app/templates/text_to_lexemes.html
@@ -96,6 +96,7 @@ ORDER BY ?word
 	    <option value="es"{% if text_language == 'es' %} selected="selected"{% endif %}>Español</option>
 	    <option value="fr"{% if text_language == 'fr' %} selected="selected"{% endif %}>Français</option>
 	    <option value="hi"{% if text_language == 'hi' %} selected="selected"{% endif %}>हिन्दी</option>
+	    <option value="ku"{% if text_language == 'ku' %} selected="selected"{% endif %}>kurdî</option>
 	    <option value="ml"{% if text_language == 'ml' %} selected="selected"{% endif %}>മലയാളം</option>
 	    <option value="pl"{% if text_language == 'pl' %} selected="selected"{% endif %}>Polski</option>
 	    <option value="pt"{% if text_language == 'pt' %} selected="selected"{% endif %}>Português</option>
