--- a/ordia/app/templates/text_to_lexemes.html
+++ b/ordia/app/templates/text_to_lexemes.html
@@ -93,7 +93,8 @@ ORDER BY ?word
 	    <option value="da"{% if text_language == 'da' %} selected="selected"{% endif %}>Dansk</option>
 	    <option value="de"{% if text_language == 'de' %} selected="selected"{% endif %}>Deutsch</option>
 	    <option value="en"{% if text_language == 'en' %} selected="selected"{% endif %}>English</option>
-	    <option value="es"{% if text_language == 'es' %} selected="selected"{% endif %}>Español</option>
+ 	    <option value="es"{% if text_language == 'es' %} selected="selected"{% endif %}>Español</option>
+ 	    <option value="eu"{% if text_language == 'eu' %} selected="selected"{% endif %}>Euskara</option>
 	    <option value="fr"{% if text_language == 'fr' %} selected="selected"{% endif %}>Français</option>
 	    <option value="hi"{% if text_language == 'hi' %} selected="selected"{% endif %}>हिन्दी</option>
 	    <option value="ku"{% if text_language == 'ku' %} selected="selected"{% endif %}>kurdî</option>
