Fix link in representation aspect

--- a/ordia/app/templates/representation.html
+++ b/ordia/app/templates/representation.html
@@ -36,6 +36,7 @@
 			   linkPrefixes: {
 			       form: '../',
 			       lexeme: '../',
+			       lexical_category: '../lexical-category/',
 			       language: '../language/',
 			   },
 			   paging: false
