Fix #51: Now link for value
There is now a drilldown on value for the property aspect
if the value is a Q-item. L-items still does not work as the
aspect is missing, cf. #47.

--- a/ordia/app/templates/property.html
+++ b/ordia/app/templates/property.html
@@ -9,12 +9,12 @@ SELECT
   ?count
   ?value ?valueLabel
   ("→" AS ?zoom)
-  (CONCAT("{{ p }}/value/", SUBSTR(STR(?value), 32)) AS ?zoomUrl)
+  (IF(STRSTARTS(STR(?value), "http://www.wikidata.org/entity/Q"), CONCAT("{{ p }}/value/", SUBSTR(STR(?value), 32)), "") AS ?zoomUrl)
 WHERE {
   {
     SELECT (COUNT(*) AS ?count) ?value
     {
-      [] a ontolex:LexicalEntry ; wdt:P31 ?value .
+	[] a ontolex:LexicalEntry ; wdt:{{ p }} ?value .
     }
     GROUP BY ?value
   }
