Fix lexeme link error in property aspect
Lexemes by value panel in property aspect had a wrong link
for the example lexeme.

--- a/ordia/app/templates/property.html
+++ b/ordia/app/templates/property.html
@@ -93,6 +93,7 @@ LIMIT 10000
  $(document).ready(function() {
      sparqlToDataTable(valuesForLexemesByValueSparql, "#values-for-lexemes-by-value", {
 	 linkPrefixes: {
+	     example_lexeme: '../',
 	     value: '../'
 	 }});
      sparqlToDataTable(valuesForLexemesByLanguageAndValueSparql, "#values-for-lexemes-by-language-and-value", {
