Implement #64: Add Punjabi to text-to-lexemes

--- a/ordia/app/templates/text_to_lexemes.html
+++ b/ordia/app/templates/text_to_lexemes.html
@@ -97,6 +97,7 @@ ORDER BY ?word
 	    <option value="fr"{% if text_language == 'fr' %} selected="selected"{% endif %}>Français</option>
 	    <option value="hi"{% if text_language == 'hi' %} selected="selected"{% endif %}>हिन्दी</option>
 	    <option value="ml"{% if text_language == 'ml' %} selected="selected"{% endif %}>മലയാളം</option>
+	    <option value="pa"{% if text_language == 'pa' %} selected="selected"{% endif %}>ਪੰਜਾਬੀ</option>
 	    <option value="pl"{% if text_language == 'pl' %} selected="selected"{% endif %}>Polski</option>
 	    <option value="pt"{% if text_language == 'pt' %} selected="selected"{% endif %}>Português</option>
 	    <option value="sv"{% if text_language == 'sv' %} selected="selected"{% endif %}>Svenska</option>
