Add gloss to form panel in representation

--- a/ordia/app/templates/representation.html
+++ b/ordia/app/templates/representation.html
@@ -6,14 +6,16 @@
 
 <script type="text/javascript">
     formsSparql = `
+
   SELECT
     ?form (SUBSTR(STR(?form), 32) AS ?formLabel)
     ?lexeme ?lexemeLabel
     ?lexical_category ?lexical_categoryLabel
+    ?gloss ?glossUrl
     ?language ?languageLabel    
 {
-  VALUES ?representation {
-    {% for language in languages %}"{{ representation }}"@{{ language }} {% endfor %}
+    VALUES ?representation {
+	    {% for language in languages %}"{{ representation }}"@{{ language }} {% endfor %}
   }	  
   ?form ontolex:representation ?representation .
   ?lexeme ontolex:lexicalForm ?form .
@@ -26,7 +28,15 @@
   ?lexeme wikibase:lexicalCategory ?lexical_category .
   ?lexical_category rdfs:label ?lexical_categoryLabel .
   FILTER (LANG(?lexical_categoryLabel) = 'en')
+  
+  OPTIONAL {
+    ?lexeme ontolex:sense / skos:definition ?gloss
+    FILTER (LANG(?gloss) = 'en')
+      BIND(CONCAT("../text-to-lexemes?text-language=en&text=", ENCODE_FOR_URI(?gloss)) AS ?glossUrl)
+
+  }
 }
+ORDER BY ?form
 `
 
 
